code25_all/scala/16767528.txt
// first, a few methods
def a(x: => Any) {}
def b(x:() => Any) {}
// then some helpers
def x = {}
def y() = {}
// these execute the possible combinations
a(x)
b(y)
a(y)
b(x)

<console>:10: error: type mismatch;
 found   : Unit
 required: () => Any
              b(x)
                ^

x
y
a(y)
